--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h4{
 }
 
 div{
-    background-color: #d0d0d5;
+    background-color: #f0f0f0;
     padding:1rem;
     border-radius: 5px;
     margin: 20px auto;
@@ -39,6 +39,7 @@ figure{
     width: 100%;
     padding: 20px;
     margin: 0 auto;
+    box-sizing:border-box;
 }
 
 img{
